# bunny-app

./: .dockerignore  .env.example  .env.playtica.example  .env.real-demo.example  .gitignore  Dockerfile  README.md  docker-compose.postgres.yml  pyproject.toml
app/: config.py  main.py
docs/: ASR_EVAL.md  BUNNY_CARROAMIX_SETUP.md  CLOUDFLARE_TUNNEL.md  KOREAN_TO_SPANISH_BUNNY_EXACT_REPORT.md  LOCAL_MULTI_PROJECT_DEV.md  MAC_AUTOSTART.md  MAC_PUBLIC_LAUNCHER.md  MVP_FINAL_SUMMARY_2026-03-23.md  PLAYTICA_SERVER.md  REAL_TWO_USER_DEMO.md  SPANISH_TO_KOREAN_BUNNY_EXACT_REPORT.md  SPANISH_TO_KOREAN_BUNNY_REPORT.md  asr_eval_expected.sample.json
macos/: BunnyPublicStart.applescript  BunnyPublicStop.applescript  BunnyUpdateTunnelToken.applescript
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
scripts/: bunny_launchd_status.sh  bunny_playtica_public_start.sh  bunny_playtica_public_stop.sh  bunny_playtica_public_supervisor.sh  bunny_public_start.sh  bunny_public_status.sh  bunny_public_stop.sh  compare_asr_reports.py  compare_latest_asr_reports.sh  eval_wav.py  init_asr_expected.py  install_macos_launch_agents.sh  install_playtica_cron.sh  install_playtica_runtime.sh  run_asr_eval.sh  run_cloudflare_public_tunnel.sh  run_real_demo.sh  store_cloudflare_tunnel_token.sh  uninstall_macos_launch_agents.sh
tests/: test_eval_tooling.py  test_llm_postedit.py  test_nllb_ct2.py  test_notifications.py  test_postgres_store_integration.py  test_room_upload.py  test_room_ws.py  test_rooms.py  test_session.py  test_translation_guardrails.py  (+2 more)
(+43 files in other folders)
